--- a/index.html
+++ b/index.html
@@ -299,14 +299,16 @@
 				<span class="clr-white art-0__text-1">ОФИЦИАЛЬНЫЙ<br/>СТИЛИСТ</span>
 				<img src="images/img_0.svg" alt="konkurs_miss-rossiya" class="art-0__logo-2">
 			</div> -->
-			<a href="https://salonmone.ru" target="_blank" class="contact mm">salonmone.ru</a>
-			<a href="https://moneprofessional.com" target="_blank" class="contact">moneprofessional.com</a>
-			<h4>По вопросам сотрудничества обращаться по телефону</h4>
-			<h4><a href="tel:+74957300710">+7 (495) 730-07-10</a><br> г. Москва, Благовещенский переулок, д.1</h4>
-			<div class="social">
-				<a href="https://www.instagram.com/mone_moscow/" class="fb"><img src="images/facebook.png" alt="facebook"></a>
-				<a href="https://www.facebook.com/monebeautysalons/" class="inst"><img src="images/instagram.png" alt="instagram"></a>
-				<a href="https://www.youtube.com/user/MONESALON/feed" class="YT"><img src="images/youtube.png" alt="youtube"></a>
+			<div class="footer__bottom">
+				<a href="https://salonmone.ru" target="_blank" class="contact mm">salonmone.ru</a>
+				<a href="https://moneprofessional.com" target="_blank" class="contact">moneprofessional.com</a>
+				<h4>По вопросам сотрудничества обращаться по телефону</h4>
+				<h4><a href="tel:+74957300710">+7 (495) 730-07-10</a><br> г. Москва, Благовещенский переулок, д.1</h4>
+				<div class="social">
+					<a href="https://www.instagram.com/mone_moscow/" class="fb"><img src="images/facebook.png" alt="facebook"></a>
+					<a href="https://www.facebook.com/monebeautysalons/" class="inst"><img src="images/instagram.png" alt="instagram"></a>
+					<a href="https://www.youtube.com/user/MONESALON/feed" class="YT"><img src="images/youtube.png" alt="youtube"></a>
+				</div>
 			</div>
 		</article>
 	</main>
